--- a/index.html
+++ b/index.html
@@ -1,352 +1,113 @@
-<!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Nepsone ehf</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body>
+---
+layout: landing
+---
+<!-- Banner -->
+<section id="banner">
+	<div class="inner">
+		<h2>{{ site.title }}</h2>
+		<p>{{ site.description | markdownify }}</p>
+		<!-- <ul class="actions">
+			<li><a href="#" class="button special">Activate</a></li>
+		</ul> -->
+	</div>
+	<a href="#intro" class="more scrolly">Learn More</a>
+</section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<!-- Intro -->
+<section id="intro" class="wrapper style5">
+	<div class="inner">
+		<header class="major">
+			<h2>Intro</h2>
+		</header>
+		<p>Nepsone is a preclinical-stage pharmaceutical company developing
+		drugs to treat dermatological conditions that arise due to an imbalance
+		in the autonomic nervous system.</p>
+		<p>Currently, these conditions are believed to originate in the immune
+		system. Nepsone’s foundational neuroimmunology theory on the origin of
+		psoriasis teaches us that an imbalance in neuropeptide activity in the
+		body leads to these conditions.</p>
+		<p>Our drugs are designed to utilize the body’s natural mechanisms to
+		bring back balance and alleviate the disease.</p>
+	</div>
+</section>
 
-				<!-- Header -->
-					<header id="header">
-						<div class="content">
-							<div class="inner">
-								<h1>Nepsone</h1>
-								<p>Ný nálgun í lyfjaþróun</p>
-							</div>
-						</div>
-						<nav>
-							<ul>
-								<li><a href="#intro">Psoriasis</a></li>
-								<li><a href="#about">Um okkur</a></li>
-								<li><a href="#contact">Hafa samband</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
-							</ul>
-						</nav>
-					</header>
+<section class="wrapper style4"></section>
 
-				<!-- Main -->
-					<div id="main">
+<!-- Pipeline -->
+<section id="pipeline" class="wrapper style5">
+	<div class="inner">
+		<header class="major">
+			<h2>Pipeline</h2>
+			<p>Nepsone’s drug discovery platform can potentially address over 10 indications in total.</p>
+		</header>
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Psoriasis</h2>
-								<span class="image main"><img src="images/psoriasis.jpg" alt="" /></span>
-								<p>Psoriasis er langvinnur ættgengur sjúkdómur. Honum fylgja margs konar óþægindi og hliðarverkanir, sumar hverjar mjög alvarlegar eins og gigt, offita, þunglyndi og hjarta- og æðasjúkdómar. Engin lækning er til við psoriasis og þær meðferðir sem til eru í dag miða einungis að því að draga úr einkennum sjúkdómsins.</p>
-
-								<p>Þessu ætlum við að breyta...</p>
-							</article>
-
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">Um okkur</h2>
-								<span class="image main"><img src="images/logo.png" alt="" /></span>
-								<p>Nepsone ehf. var stofnað árið 2004 á fyrsta alþjóðlega psoriasis deginum og er rannsóknarfyrirtæki sem sérhæfir sig í lyfjarannsóknum með sérstaka áherslu á húðsjúkdóma.</p>
-							</article>
-
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Hafa samband</h2>
-								<p>
-									<i class="fa fa-envelope"></i> <a href="mailto:info@nepsone.com">info@nepsone.com</a><br/>
-									<i class="fa fa-phone"> </i> +354 555 1634
-								</p>
-								<!-- <form method="post" action="#">
-									<div class="field half first">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="special" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form> -->
-								<!-- <ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-								</ul> -->
-							</article>
-
-						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
-
-								<section>
-									<h3 class="major">Text</h3>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
-									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h4>Preformatted</h4>
-									<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-								</section>
-
-								<section>
-									<h3 class="major">Lists</h3>
-
-									<h4>Unordered</h4>
-									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Alternate</h4>
-									<ul class="alt">
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Ordered</h4>
-									<ol>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis viverra.</li>
-										<li>Felis enim feugiat.</li>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis lorem.</li>
-										<li>Felis enim et feugiat.</li>
-									</ol>
-									<h4>Icons</h4>
-									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-									</ul>
-
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions vertical">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Table</h3>
-									<h4>Default</h4>
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-
-									<h4>Alternate</h4>
-									<div class="table-wrapper">
-										<table class="alt">
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-								</section>
-
-								<section>
-									<h3 class="major">Buttons</h3>
-									<ul class="actions">
-										<li><a href="#" class="button special">Special</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Default</a></li>
-										<li><a href="#" class="button small">Small</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button special icon fa-download">Icon</a></li>
-										<li><a href="#" class="button icon fa-download">Icon</a></li>
-									</ul>
-									<ul class="actions">
-										<li><span class="button special disabled">Disabled</span></li>
-										<li><span class="button disabled">Disabled</span></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Form</h3>
-									<form method="post" action="#">
-										<div class="field half first">
-											<label for="demo-name">Name</label>
-											<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-										</div>
-										<div class="field half">
-											<label for="demo-email">Email</label>
-											<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
-										</div>
-										<div class="field">
-											<label for="demo-category">Category</label>
-											<div class="select-wrapper">
-												<select name="demo-category" id="demo-category">
-													<option value="">-</option>
-													<option value="1">Manufacturing</option>
-													<option value="1">Shipping</option>
-													<option value="1">Administration</option>
-													<option value="1">Human Resources</option>
-												</select>
-											</div>
-										</div>
-										<div class="field half first">
-											<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-											<label for="demo-priority-low">Low</label>
-										</div>
-										<div class="field half">
-											<input type="radio" id="demo-priority-high" name="demo-priority">
-											<label for="demo-priority-high">High</label>
-										</div>
-										<div class="field half first">
-											<input type="checkbox" id="demo-copy" name="demo-copy">
-											<label for="demo-copy">Email me a copy</label>
-										</div>
-										<div class="field half">
-											<input type="checkbox" id="demo-human" name="demo-human" checked>
-											<label for="demo-human">Not a robot</label>
-										</div>
-										<div class="field">
-											<label for="demo-message">Message</label>
-											<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="special" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</section>
-
-							</article>
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<p class="copyright">&copy; Nepsone ehf. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
-
+		<div class="row">
+			<div class="6u">
+				<h4>Psoriasis (Lead Indication)</h4>
+				<p>Phase: Preclinical</p>
+				<p>Modalities: Topical and Systemic</p>
 			</div>
+			<div class="6u"><span class="image fit"><img src="images/psoriasis.jpg" alt=""></span></div>
+		<div class="row">
+			<div class="6u">
+				<h4>Alopecia Areata</h4>
+				<p>Phase: Research and Discovery</p>
+				<p>Modality: Topical</p>
+				<p><em>There are currently no approved drugs for the treatment of alopecia areata.</em></p>
+			</div>
+			<div class="6u"><span class="image fit"><img src="images/alopecia.jpg" alt=""></span></div>
+		</div>
+		<div class="row">
+			<div class="6u">
+				<h2>Eczema (Atopic Dermatitis)</h2>
+				<p>Phase: Research and Discovery</p>
+				<p>Modality: Topical</p>
+			</div>
+			<div class="6u"><span class="image fit"><img src="images/eczema.jpg" alt=""></span></div>
+		</div>
+		<div class="row">
+			<div class="6u">
+				<h2>Wound Healing</h2>
+				<p>Phase: Research and Discovery</p>
+				<p>Modality: Topical</p>
+			</div>
+			<div class="6u"><span class="image fit"><img src="images/wound.jpg" alt=""></span></div>
+		</div>
+	</div>
+</section>
 
-		<!-- BG -->
-			<div id="bg"></div>
+<section class="wrapper style4"></section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+<!-- News -->
+<section id="news" class="wrapper style5">
+	<div class="inner">
+		<header class="major">
+			<h2>News</h2>
+		</header>
+		{% for post in site.posts %}
+		<section>
+			<header>
+				<h3>{{ post.title }}</h3>
+				<p>{{ post.date | date: "%Y-%m-%d" }}</p>
+			</header>
+			<p>{{ post.content }}</p>
+		</section>
+		{% endfor %}
+	</div>
+</section>
 
-	</body>
-</html>
+<!-- Contact -->
+<section id="contact" class="wrapper style4">
+	<div class="inner">
+		<header class="major">
+			<h2>Contact Us</h2>
+		</header>
+		<dl>
+			<dt><strong>Nepsone ehf.</strong></dt>
+			<dt>Hverfisgata 105</dt>
+			<dt>101 Reykjavik</dt>
+		</dl>
+		<p><i class="fa fa-envelope"></i> <a href="mailto:info@nepsone.com">info@nepsone.com</a></p>
+		<p><i class="fa fa-phone"></i>+354 555 1634</p>
+	</div>
+</section>
