Removed wound healing references

--- a/index.html
+++ b/index.html
@@ -65,14 +65,6 @@ layout: landing
 			</div>
 			<div class="6u"><span class="image fit"><img src="images/eczema.jpg" alt=""></span></div>
 		</div>
-		<div class="row">
-			<div class="6u">
-				<h2>Wound Healing</h2>
-				<p>Phase: Research and Discovery</p>
-				<p>Modality: Topical</p>
-			</div>
-			<div class="6u"><span class="image fit"><img src="images/wound.jpg" alt=""></span></div>
-		</div>
 	</div>
 </section>
 
@@ -106,6 +98,7 @@ layout: landing
 			<dt><strong>Nepsone ehf.</strong></dt>
 			<dt>Hverfisgata 105</dt>
 			<dt>101 Reykjavik</dt>
+			<dt>Iceland</dt>
 		</dl>
 		<p><i class="fa fa-envelope"></i> <a href="mailto:info@nepsone.com">info@nepsone.com</a></p>
 		<p><i class="fa fa-phone"></i>+354 555 1634</p>
