People of nepsone

--- a/index.html
+++ b/index.html
@@ -88,6 +88,65 @@ layout: landing
 	</div>
 </section>
 
+<section class="wrapper style4"></section>
+
+<!-- People -->
+<section id="three" class="wrapper style5 special">
+	<div class="inner">
+		<header class="major">
+			<h2>The People of Nepsone</h2>
+		</header>
+
+		<div class="row">
+			<div class="3u">
+				<span class="image fit">
+					<img src="/images/birkir.jpg" />
+				</span>
+				<h4>Birkir Sveinsson</h4>
+				<p>CEO and member of the board</p>
+			</div>
+			<div class="3u">
+				<span class="image fit">
+					<img src="/images/sirus.jpg" />
+				</span>
+				<h4>Sirus Bernhard Palsson</h4>
+				<p>COO</p>
+			</div>
+			<div class="3u">
+				<span class="image fit">
+					<img src="/images/bjarki.jpg" />
+				</span>
+				<h4>Bjarki Gudlaugsson</h4>
+				<p>CIO and member of the board</p>
+			</div>
+			<div class="3u">
+				<span class="image fit">
+					<img src="/images/tomas.jpg" />
+				</span>
+				<h4>Tomas Thorvaldsson</h4>
+				<p>Chairman of the board</p>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="3u">
+				<span class="image fit">
+					<img src="/images/hakon.jpg" />
+				</span>
+				<h4>Hakon Hrafn Sigurdsson</h4>
+				<p>Member of the board</p>
+			</div>
+			<div class="3u">
+				<span class="image fit">
+					<img src="/images/david.png" />
+				</span>
+				<h4>David Olafsson</h4>
+				<p>CTO</p>
+			</div>
+		</div>
+	</div>
+</section>
+
 <!-- Contact -->
 <section id="contact" class="wrapper style4">
 	<div class="inner">
