Rannís logo on site

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@ layout: landing
 		<p>Our drugs are designed to utilize the body’s natural mechanisms to
 		bring back balance and alleviate the disease.</p>
 	</div>
+	<div class="inner">
+		<h2>Technology Development Fund (Rannís)</h2>
+
+		<p>Nepsone ehf has been awarded a grant from Tækniþróunarsjóður (Technology Development Fund) of Rannís (The Icelandic Centre for Research).</p>
+
+		<img src="images/Tthrsj_logo_IS.jpg" height="100" />
+		<img src="images/Kennimark-A2.jpg" height="100" />
+	</div>
 </section>
 
 <section class="wrapper style4"></section>
