Updated CTO on main page

--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@ layout: landing
 			<h2>Intro</h2>
 		</header>
 		<p>Nepsone is a preclinical-stage pharmaceutical company developing
-		drugs to treat dermatological conditions that arise due to an imbalance
-		in the autonomic nervous system.</p>
+			drugs to treat dermatological conditions that arise due to an imbalance
+			in the autonomic nervous system.</p>
 		<p>Currently, these conditions are believed to originate in the immune
-		system. Nepsone’s foundational neuroimmunology theory on the origin of
-		psoriasis teaches us that an imbalance in neuropeptide activity in the
-		body leads to these conditions.</p>
+			system. Nepsone’s foundational neuroimmunology theory on the origin of
+			psoriasis teaches us that an imbalance in neuropeptide activity in the
+			body leads to these conditions.</p>
 		<p>Our drugs are designed to utilize the body’s natural mechanisms to
-		bring back balance and alleviate the disease.</p>
+			bring back balance and alleviate the disease.</p>
 	</div>
 	<div class="inner">
 		<h2>Technology Development Fund (Rannís)</h2>
 
-		<p>Nepsone ehf has been awarded a grant from Tækniþróunarsjóður (Technology Development Fund) of Rannís (The Icelandic Centre for Research).</p>
+		<p>Nepsone ehf has been awarded a grant from Tækniþróunarsjóður (Technology Development Fund) of Rannís (The
+			Icelandic Centre for Research).</p>
 
 		<img src="images/Tthrsj_logo_IS.jpg" height="100" />
 		<img src="images/Kennimark-A2.jpg" height="100" />
@@ -56,24 +57,24 @@ layout: landing
 				<p>Modalities: Topical and Systemic</p>
 			</div>
 			<div class="6u"><span class="image fit"><img src="images/psoriasis.jpg" alt=""></span></div>
-		<div class="row">
-			<div class="6u">
-				<h4>Alopecia Areata</h4>
-				<p>Phase: Research and Discovery</p>
-				<p>Modality: Topical</p>
-				<p><em>There are currently no approved drugs for the treatment of alopecia areata.</em></p>
+			<div class="row">
+				<div class="6u">
+					<h4>Alopecia Areata</h4>
+					<p>Phase: Research and Discovery</p>
+					<p>Modality: Topical</p>
+					<p><em>There are currently no approved drugs for the treatment of alopecia areata.</em></p>
+				</div>
+				<div class="6u"><span class="image fit"><img src="images/alopecia.jpg" alt=""></span></div>
 			</div>
-			<div class="6u"><span class="image fit"><img src="images/alopecia.jpg" alt=""></span></div>
-		</div>
-		<div class="row">
-			<div class="6u">
-				<h4>Eczema (Atopic Dermatitis)</h4>
-				<p>Phase: Research and Discovery</p>
-				<p>Modality: Topical</p>
+			<div class="row">
+				<div class="6u">
+					<h4>Eczema (Atopic Dermatitis)</h4>
+					<p>Phase: Research and Discovery</p>
+					<p>Modality: Topical</p>
+				</div>
+				<div class="6u"><span class="image fit"><img src="images/eczema.jpg" alt=""></span></div>
 			</div>
-			<div class="6u"><span class="image fit"><img src="images/eczema.jpg" alt=""></span></div>
 		</div>
-	</div>
 </section>
 
 <section class="wrapper style4"></section>
@@ -106,7 +107,7 @@ layout: landing
 		</header>
 
 		<div class="row">
-			
+
 			<div class="3u">
 				<span class="image fit">
 					<img src="/images/birkir.jpg" />
@@ -130,9 +131,9 @@ layout: landing
 			</div>
 			<div class="3u">
 				<span class="image fit">
-					<img src="/images/david.jpg" />
+					<img src="/images/svandis.jpg" />
 				</span>
-				<h4>David Olafsson</h4>
+				<h4>Svandis Kristjansdotti</h4>
 				<p><strong>CTO</strong></p>
 			</div>
 		</div>
