Missing r in name

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ layout: landing
 				<span class="image fit">
 					<img src="/images/svandis.jpg" />
 				</span>
-				<h4>Svandis Kristjansdotti</h4>
+				<h4>Svandis Kristjansdottir</h4>
 				<p><strong>CTO</strong></p>
 			</div>
 		</div>
