Replaced COO on front page

--- a/index.html
+++ b/index.html
@@ -117,17 +117,10 @@ layout: landing
 			</div>
 			<div class="3u">
 				<span class="image fit">
-					<img src="/images/sirus.jpg" />
-				</span>
-				<h4>Sirus B. Palsson</h4>
-				<p><strong>COO</strong></p>
-			</div>
-			<div class="3u">
-				<span class="image fit">
 					<img src="/images/bjarki.jpg" />
 				</span>
 				<h4>Bjarki Gudlaugsson</h4>
-				<p><strong>CIO</strong> / Member of the board</p>
+				<p><strong>COO</strong> / Member of the board</p>
 			</div>
 			<div class="3u">
 				<span class="image fit">
