--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: landing
 			drugs to treat dermatological conditions that arise due to an imbalance
 			in the autonomic nervous system.</p>
 		<p>Currently, these conditions are believed to originate in the immune
-			system. Nepsone’s foundational neuroimmunology theory on the origin of
+			system. Nepsone foundational neuroimmunology theory on the origin of
 			psoriasis teaches us that an imbalance in neuropeptide activity in the
 			body leads to these conditions.</p>
 		<p>Our drugs are designed to utilize the body’s natural mechanisms to
@@ -165,7 +165,7 @@ layout: landing
 		</header>
 		<dl>
 			<dt><strong>Nepsone ehf.</strong></dt>
-			<dt>Hverfisgata 105</dt>
+			<dt>Laugavegur 7</dt>
 			<dt>101 Reykjavik</dt>
 			<dt>Iceland</dt>
 		</dl>
