Added photo of Gunhild and updated company employee listing

--- a/index.html
+++ b/index.html
@@ -87,21 +87,33 @@ layout: landing
 		</header>
 
 		<div class="row">
-
-
 			<div class="3u">
 				<span class="image fit">
 					<img src="/images/bjarki.jpg" />
 				</span>
 				<h4>Bjarki Gudlaugsson</h4>
-				<p><strong>COO</strong> / Member of the board</p>
+				<p><strong>COO</strong></p>
 			</div>
 			<div class="3u">
 				<span class="image fit">
 					<img src="/images/svandis.jpg" />
 				</span>
 				<h4>Svandis Kristjansdottir</h4>
-				<p><strong>CTO</strong></p>
+				<p><strong>Head of Clinical Development</strong></p>
+			</div>
+			<div class="3u">
+				<span class="image fit">
+					<img src="/images/hakon.jpg" />
+				</span>
+				<h4>Hakon Hrafn Sigurdsson</h4>
+				<p>Head of R&amp;D</p>
+			</div>
+			<div class="3u">
+				<span class="image fit">
+					<img src="/images/gunhild.jpg" />
+				</span>
+				<h4>Gunhild L Skovgaard</h4>
+				<p>Head of Medical Affairs</p>
 			</div>
 		</div>
 
@@ -115,18 +127,19 @@ layout: landing
 			</div>
 			<div class="3u">
 				<span class="image fit">
+					<img src="/images/birkir.jpg" />
+				</span>
+				<h4>Birkir Sveinsson</h4>
+				<p>Founder / Member of the board</p>
+			</div>
+			<div class="3u">
+				<span class="image fit">
 					<img src="/images/ragnar.jpg" />
 				</span>
 				<h4>Ragnar Bjarnason</h4>
 				<p>Member of the board</p>
 			</div>
-			<div class="3u">
-				<span class="image fit">
-					<img src="/images/hakon.jpg" />
-				</span>
-				<h4>Hakon Hrafn Sigurdsson</h4>
-				<p>Member of the board</p>
-			</div>
+			
 		</div>
 	</div>
 </section>
