Updated indication text and added picture of Stefan

--- a/deprecated.html
+++ b/deprecated.html
@@ -23,5 +23,5 @@
     <img src="/images/birkir.jpg" />
   </span>
   <h4>Birkir Sveinsson</h4>
-  <p><strong>CEO</strong> / Member of the board</p>
+  <p><strong>Founder</strong> / Member of the board</p>
 </div>
