--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ layout: landing
 	<div class="inner">
 		<header class="major">
 			<h2>Pipeline</h2>
-			<p>Nepsone’s drug discovery platform can potentially address over 10 indications in total.</p>
+			<p>Nepsone's drug discovery platform can potentially address over 20 indications in total.</p>
 		</header>
 
 		<div class="row">
@@ -55,6 +55,7 @@ layout: landing
 				<h4>Psoriasis (Lead Indication)</h4>
 				<p>Phase: Preclinical</p>
 				<p>Modalities: Topical and Systemic</p>
+				<p><em>There are several treatments approved for the treatment of psoriasis (e.g. corticosteroids, biologics, light therapy) but no first-in-line treatment has been established yet.</em></p>
 			</div>
 			<div class="6u"><span class="image fit"><img src="images/psoriasis.jpg" alt=""></span></div>
 			<div class="row">
@@ -62,7 +63,7 @@ layout: landing
 					<h4>Alopecia Areata</h4>
 					<p>Phase: Research and Discovery</p>
 					<p>Modality: Topical</p>
-					<p><em>There are currently no approved drugs for the treatment of alopecia areata.</em></p>
+					<p><em>The currently available treatment for alopecia areata is the first-in-line Janus kinase inhibitor (JAK) approved by FDA in 2021.</em></p>
 				</div>
 				<div class="6u"><span class="image fit"><img src="images/alopecia.jpg" alt=""></span></div>
 			</div>
@@ -71,6 +72,7 @@ layout: landing
 					<h4>Eczema (Atopic Dermatitis)</h4>
 					<p>Phase: Research and Discovery</p>
 					<p>Modality: Topical</p>
+					<p><em>The current standard-of-care for dermatitis is corticosteroids, biologics or light therapy.</em></p>
 				</div>
 				<div class="6u"><span class="image fit"><img src="images/eczema.jpg" alt=""></span></div>
 			</div>
@@ -87,6 +89,13 @@ layout: landing
 		</header>
 
 		<div class="row">
+			<div class="3u">
+				<span class="image fit">
+					<img src="/images/stefan.jpg" />
+				</span>
+				<h4>Stefan Jokull Sveinsson</h4>
+				<p>CEO</p>
+			</div>
 			<div class="3u">
 				<span class="image fit">
 					<img src="/images/bjarki.jpg" />
@@ -108,6 +117,9 @@ layout: landing
 				<h4>Hakon Hrafn Sigurdsson</h4>
 				<p>Head of R&amp;D</p>
 			</div>
+		</div>
+
+		<div class="row">
 			<div class="3u">
 				<span class="image fit">
 					<img src="/images/gunhild.jpg" />
@@ -115,9 +127,6 @@ layout: landing
 				<h4>Gunhild L Skovgaard</h4>
 				<p>Head of Medical Affairs</p>
 			</div>
-		</div>
-
-		<div class="row">
 			<div class="3u">
 				<span class="image fit">
 					<img src="/images/tomas.jpg" />
@@ -152,7 +161,7 @@ layout: landing
 		</header>
 		<dl>
 			<dt><strong>Nepsone ehf.</strong></dt>
-			<dt>Laugavegur 77</dt>
+			<dt>Tjarnargata 4</dt>
 			<dt>101 Reykjavik</dt>
 			<dt>Iceland</dt>
 		</dl>
