Updated frontpage and included alt for images

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ layout: landing
 		<p>Nepsone ehf has been awarded a grant from Tækniþróunarsjóður (Technology Development Fund) of Rannís (The
 			Icelandic Centre for Research).</p>
 
-		<img src="images/Tthrsj_logo_IS.jpg" height="100" />
-		<img src="images/Kennimark-A2.jpg" height="100" />
+		<img alt="Technology Development Fund" src="images/Tthrsj_logo_IS.jpg" height="100" />
+		<img alt="The Icelandic Center for Research" src="images/Kennimark-A2.jpg" height="100" />
 	</div>
 </section>
 
@@ -91,28 +91,28 @@ layout: landing
 		<div class="row">
 			<div class="3u">
 				<span class="image fit">
-					<img src="/images/stefan.jpg" />
+					<img alt="Stefan Jokull Sveinsson" src="/images/stefanjokull.jpg" />
 				</span>
 				<h4>Stefan Jokull Sveinsson</h4>
 				<p>CEO</p>
 			</div>
 			<div class="3u">
 				<span class="image fit">
-					<img src="/images/bjarki.jpg" />
+					<img alt="Bjarki Gudlaugsson" src="/images/bjarki.jpg" />
 				</span>
 				<h4>Bjarki Gudlaugsson</h4>
 				<p><strong>COO</strong></p>
 			</div>
 			<div class="3u">
 				<span class="image fit">
-					<img src="/images/svandis.jpg" />
+					<img alt="Svandis Kristjansdottir" src="/images/svandis.jpg" />
 				</span>
 				<h4>Svandis Kristjansdottir</h4>
 				<p><strong>Head of Clinical Development</strong></p>
 			</div>
 			<div class="3u">
 				<span class="image fit">
-					<img src="/images/hakon.jpg" />
+					<img alt="Hakon Hrafn Sigurdsson" src="/images/hakon.jpg" />
 				</span>
 				<h4>Hakon Hrafn Sigurdsson</h4>
 				<p>Head of R&amp;D</p>
@@ -122,28 +122,28 @@ layout: landing
 		<div class="row">
 			<div class="3u">
 				<span class="image fit">
-					<img src="/images/gunhild.jpg" />
+					<img alt="Gunhild L Skovgaard" src="/images/gunhild.jpg" />
 				</span>
 				<h4>Gunhild L Skovgaard</h4>
 				<p>Head of Medical Affairs</p>
 			</div>
 			<div class="3u">
 				<span class="image fit">
-					<img src="/images/tomas.jpg" />
+					<img alt="Tomas Thorvaldsson" src="/images/tomas.jpg" />
 				</span>
 				<h4>Tomas Thorvaldsson</h4>
 				<p>Chairman of the board</p>
 			</div>
 			<div class="3u">
 				<span class="image fit">
-					<img src="/images/birkir.jpg" />
+					<img alt="Birkir Sveinsson" src="/images/birkir.jpg" />
 				</span>
 				<h4>Birkir Sveinsson</h4>
 				<p>Founder / Member of the board</p>
 			</div>
 			<div class="3u">
 				<span class="image fit">
-					<img src="/images/ragnar.jpg" />
+					<img alt="Ragnar Bjarnason" src="/images/ragnar.jpg" />
 				</span>
 				<h4>Ragnar Bjarnason</h4>
 				<p>Member of the board</p>
